@@ -8,10 +8,10 @@
 	<packaging>pom</packaging>
 	<description>Test</description>
 	<properties>
-		<java.version>10</java.version>
-		<maven.compiler.release>10</maven.compiler.release>
-		<maven.compiler.source>9</maven.compiler.source> 
-		<maven.compiler.target>9</maven.compiler.target> 
+		<java.version>11</java.version>
+		<maven.compiler.release>11</maven.compiler.release>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<checker.framework.version>2.5.6</checker.framework.version>
 		<junit.version>4.13-beta-2</junit.version>
@@ -69,11 +69,8 @@
 					<Xmaxerrs>10000</Xmaxerrs>
 					<Xmaxwarns>10000</Xmaxwarns>
 					<encoding>${project.build.sourceEncoding}</encoding>
-					<compilerArgs>
-						<arg>--add-modules</arg>
-						<arg>java.xml.bind</arg>
-						<!-- <arg>-Xbootclasspath/p:${annotatedJdk}</arg> -->
-					</compilerArgs>
+					<!-- <compilerArgs> <arg>add-modules</arg> <arg>java.xml.bind</arg> 
+						<arg>-Xbootclasspath/p:${annotatedJdk}</arg> </compilerArgs> -->
 					<!-- <annotationProcessorPaths> <path> <groupId>org.checkerframework</groupId> 
 						<artifactId>checker</artifactId> <version>${checker.framework.version}</version> 
 						</path> </annotationProcessorPaths> <annotationProcessors> <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor> 
@@ -322,6 +319,11 @@
 				<groupId>net.java.dev.jna</groupId>
 				<artifactId>jna-platform</artifactId>
 				<version>5.2.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-controls</artifactId>
+				<version>11</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
